// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/settings/TextSetting render component with required props 1`] = `
<Setting
  inputClassName=""
  inputId="string.id"
  label="some label"
  labelClassName=""
>
  <input
    className="form-control"
    data-testid="string.idinput"
    id="string.id"
    maxLength={-1}
    onChange={[Function]}
    type="text"
    value="some value"
  />
</Setting>
`;

exports[`components/widgets/settings/TextSetting render with textarea type 1`] = `
<Setting
  inputClassName=""
  inputId="string.id"
  label="some label"
  labelClassName=""
>
  <textarea
    className="form-control"
    data-testid="string.idinput"
    dir="auto"
    id="string.id"
    maxLength={-1}
    onChange={[Function]}
    rows={5}
    value="some value"
  />
</Setting>
`;
